대문자되어있는거 소문자 변경

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -33,4 +33,4 @@ jobs:
       with:
         context: . # Dockerfile이 있는 현재 디렉토리
         push: true #빌드 후 바로 푸시
-        tags: ${{ Secrets.DOCKER_USERNAME }}/nwork:latest # 최종 이미지 태그 지정
+        tags: ${{ secrets.DOCKER_USERNAME }}/nwork:latest # 최종 이미지 태그 지정
