--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -12,25 +12,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. 저장소 코드 체크아웃
-    - name : Checkout repository
-      uses: actions/checkout@v4
+      ## 코드 테스트 ##
+      - name: Node.js 환경 설정
+        uses: actions/setup-node@v4
+        with:
+          node-version: 24.x
+          cache: 'npm'
+          
+      - name: 의존성 설치
+        run: npm install
+      
+      - name: 단위 테스트 실행
+        run: npm run test:unit
+      
+      - name: 통합 테스트 실행
+        run: npm run test:integration    
 
-    # 2. Docker 로그인 (Secret에 저장된 인증 정보 사용)
-    - name: Docker Login
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
 
-    # 3. Docker 이미지 메타데이터 설정
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      ## 이미지 빌드 ##
+      # 1. 저장소 코드 체크아웃
+      # - name : Checkout repository
+      #   uses: actions/checkout@v4
 
-    # 4. 이미지 빌드 및 Docker Hub 푸시
-    - name: Build and Push Docker image
-      uses: docker/build-push-action@v6
-      with:
-        context: . # Dockerfile이 있는 현재 디렉토리
-        push: true #빌드 후 바로 푸시
-        tags: ${{ secrets.DOCKER_USERNAME }}/nwork:latest # 최종 이미지 태그 지정
+      # 2. Docker 로그인 (Secret에 저장된 인증 정보 사용)
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      # 3. Docker 이미지 메타데이터 설정
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # 4. 이미지 빌드 및 Docker Hub 푸시
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: . # Dockerfile이 있는 현재 디렉토리
+          push: true #빌드 후 바로 푸시
+          tags: ${{ secrets.DOCKER_USERNAME }}/nwork:latest # 최종 이미지 태그 지정
